kustomize/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: debian-k3s-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
  - name: kafka-external
    port: 9095
    protocol: TCP

  - name: redis
    port: 6379
    protocol: TCP

  - name: rabbitmq
    port: 5672
    protocol: TCP

  - name: postgresql
    port: 5432
    protocol: TCP

  - name: web
    port: 80
    protocol: HTTP
    hostname: "*.debian-k3s"

  - name: websecure
    port: 443
    protocol: HTTPS
    hostname: "*.debian-k3s"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: debian-k3s-gateway-tls
        namespace: traefik
